do not qualify rest clients as @Default